Implemented the storage & retrieval

--- a/code.ipynb
+++ b/code.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "code.ipynb",
-      "authorship_tag": "ABX9TyOMAqbrIMkZIg51ChQZtPKx",
+      "authorship_tag": "ABX9TyP2e5zL/9bZKqh6hBmptrqA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -260,6 +260,256 @@
       "metadata": {
         "id": "mdRV1uP-AqNo"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.text_splitter import RecursiveCharacterTextSplitter # or CharacterTextSplitter"
+      ],
+      "metadata": {
+        "id": "fap_sScLjUsN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "chunk_size = 26 #Define chunk size and chunk overlap\n",
+        "chunk_overlap = 4"
+      ],
+      "metadata": {
+        "id": "8_5OL7lFjadN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text_splitter = RecursiveCharacterTextSplitter(\n",
+        "    chunk_size=chunk_size,\n",
+        "    chunk_overlap=chunk_overlap\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "mOYD1AEBjfeL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# c_splitter = CharacterTextSplitter(\n",
+        "#     chunk_size=chunk_size,\n",
+        "#     chunk_overlap=chunk_overlap\n",
+        "# ) if CharacterTextSplitter used"
+      ],
+      "metadata": {
+        "id": "5G9YRpSpjpi0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "splits = text_splitter.split_documents(pages)"
+      ],
+      "metadata": {
+        "id": "3Bc0AFfbk9aC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(splits)"
+      ],
+      "metadata": {
+        "id": "6IX2JbG-li1S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 3 : Embedding**"
+      ],
+      "metadata": {
+        "id": "z_5DCd4-lout"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.embeddings.openai import OpenAIEmbeddings\n",
+        "embedding = OpenAIEmbeddings()"
+      ],
+      "metadata": {
+        "id": "2xEYN_7zlmAs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 4: Vectorstores**\n"
+      ],
+      "metadata": {
+        "id": "yDK0FLNll9Nk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ! pip install chromadb\n",
+        "from langchain.vectorstores import Chroma"
+      ],
+      "metadata": {
+        "id": "M9S5SrYHl7P9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "persist_directory = 'docs/chroma/' # for the purpose of storage in the vectorstorage"
+      ],
+      "metadata": {
+        "id": "CNLmKDW3mSK3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!rm -rf ./docs/chroma  # remove old database files if any"
+      ],
+      "metadata": {
+        "id": "LKvxPqxVmdZ9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vectordb = Chroma.from_documents(\n",
+        "    documents=splits,\n",
+        "    embedding=embedding,\n",
+        "    persist_directory=persist_directory\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "SDRyCy9Bmgah"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(vectordb._collection.count())"
+      ],
+      "metadata": {
+        "id": "oopTRRVYmiXm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Similarity Search**"
+      ],
+      "metadata": {
+        "id": "IShA4UypmzF8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "question = \"\" # any concerned question you want to ask to the document"
+      ],
+      "metadata": {
+        "id": "l-B-IugWm3ne"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "docs = vectordb.similarity_search(question,k=3)"
+      ],
+      "metadata": {
+        "id": "WKx_IRF7m_im"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vectordb.persist() # To save the instance for fututre purpose"
+      ],
+      "metadata": {
+        "id": "E3sZM033nH0Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "With till above code you can retrive the information from your document with acquiring over 80 percent of the result."
+      ],
+      "metadata": {
+        "id": "SsKR1QKBXuFl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In order to increase the effeciency of the output we would require to perform these.\n",
+        "\n",
+        "**Retrieval**\n",
+        "Retrieval is the centerpiece of our retrieval augmented generation (RAG) flow."
+      ],
+      "metadata": {
+        "id": "elcZaoWyYCM0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1 MMR - Maximum marginal relevance strives to achieve both relevance to the query and diversity among the results.\n",
+        "\n",
+        "docs_mmr = vectordb.max_marginal_relevance_search(question,k=3, fetch_k=3) # note how the result changes on variating the k value and also compare the result with the similarity search result to that of this result."
+      ],
+      "metadata": {
+        "id": "UvjAVmXSWuV2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "docs_mmr[0].page_content[:100]"
+      ],
+      "metadata": {
+        "id": "6KP8BeheYMJY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
